--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,9 @@ repositories {
 dependencies {
     // The production code uses the SLF4J logging API at compile time
     implementation 'org.slf4j:slf4j-api:1.7.25'
-  	implementation 'com.sedmelluq:lavaplayer:1.3.50'
+  	implementation 'com.sedmelluq:lavaplayer:1.3.73'
     implementation 'net.dv8tion:JDA:4.0.0_39'
+    implementation 'org.apache.commons:commons-text:1.9'
     
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
