--- a/build.gradle
+++ b/build.gradle
@@ -25,12 +25,23 @@ repositories {
     }
 }
 
+sourceSets {
+  main {
+    java {
+      exclude 'some/unwanted/package/**'
+    }
+    resources {
+    
+    }
+  }
+}
+
 // In this section you declare the dependencies for your production and test code
 dependencies {
     // The production code uses the SLF4J logging API at compile time
-    implementation 'org.slf4j:slf4j-api:1.7.25'
-  	implementation 'com.sedmelluq:lavaplayer:1.3.73'
-    implementation 'net.dv8tion:JDA:4.3.0_283'
+    implementation 'org.slf4j:slf4j-log4j12:1.7.31'
+   	implementation 'com.sedmelluq:lavaplayer:1.3.+'
+    implementation 'net.dv8tion:JDA:4.+'
     implementation 'org.apache.commons:commons-text:1.9'
     
     // Declare the dependency for your favourite test framework you want to use in your tests.
@@ -46,8 +57,8 @@ application {
 
 jar {
 	manifest {
-		attributes 'Main-Class': 'piman.TestBot'
-				   //'Class-Path': configurations.runtime.files.collect { "lib/$it.name" }.join(' ')
+		attributes 'Main-Class': 'piman.TestBot',
+				   'Class-Path': 'slf4j-log4j12-1.7.31.jar'
 	}
 }
 
